fix unwanted white spaces

--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,7 @@ textarea {
 html, body {
   max-width: 100%;
   overflow-x: hidden;
+  min-width: 100%;
 }
 
 h1 {
